--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,7 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: next
+# theme: alpha-dust
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
