--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://scarboroughcoral.github.io/MyBlog
-root: /MyBlog/
+url: http://yoursite.com
+root: /
 # permalink: :year/:month/:day/:title/
 permalink: :category/:title/
 permalink_defaults:
