--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -10,6 +10,17 @@
 # Theme Core Configuration Settings
 # ---------------------------------------------------------------
 
+live2d:
+  enable: true
+  scriptFrom: local
+  model:
+    use: live2d-widget-model-wanko
+  display:
+    position: right
+    width: 150
+    height: 300
+  mobile:
+    show: true
 # Set to true, if you want to fully override the default configuration.
 # Useful if you don't want to inherit the theme _config.yml configurations.
 override: false
