--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.4.4"
   },
   "dependencies": {
+    "gitment": "^0.0.3",
     "hexo": "^3.2.0",
     "hexo-asset-image": "^0.0.3",
     "hexo-deployer-git": "^0.3.1",
