--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -482,7 +482,7 @@ needmoreshare2:
 # See: https://www.bing.com/webmaster/
 #bing_site_verification:
 
-baidu_site_verification: false
+baidu_site_verification: true
 
 # Yandex Webmaster tools verification setting
 # See: https://webmaster.yandex.ru/
