--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Scarborough_Coral's Home
+title: Scarborough_Coral's<br> Home
 subtitle:
 description: "不忘初心"
 author: Scarborough_Coral
