--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gitment": "^0.0.3",
     "hexo": "^3.2.0",
     "hexo-asset-image": "^0.0.3",
+    "hexo-baidu-url-submit": "^0.0.5",
     "hexo-deployer-git": "^0.3.1",
     "hexo-filter-sequence": "^1.0.3",
     "hexo-generator-archive": "^0.1.4",
