--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -255,8 +255,8 @@ post_wordcount:
 
 # Reward
 reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
-wechatpay: /uploads/alipay.jpg
-alipay: /uploads/wechatpay.png
+wechatpay: /uploads/wechatpay.png
+alipay: /uploads/alipay.jpg
 
 # Declare license on posts
 post_copyright:
