--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 baidu_url_submit:
   count: 3 ## 比如3，代表提交最新的三个链接
   host: blog.scarboroughcoral.top ## 在百度站长平台中注册的域名
-  token: your_token ## 请注意这是您的秘钥， 请不要发布在公众仓库里!
+  token: VvFr9Sal8VjBlV3c ## 请注意这是您的秘钥， 请不要发布在公众仓库里!
   path: baidu_urls.txt ## 文本文档的地址， 新链接会保存在此文本文档里
 
 # URL
