--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.6.0"
+    "version": "3.7.1"
   },
   "dependencies": {
     "gitment": "^0.0.3",
-    "hexo": "^3.2.0",
+    "hexo": "^3.7.1",
     "hexo-asset-image": "^0.0.3",
     "hexo-deployer-git": "^0.3.1",
     "hexo-filter-sequence": "^1.0.3",
@@ -17,7 +17,8 @@
     "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
-    "hexo-renderer-marked": "^0.2.10",
+    "hexo-renderer-kramed": "^0.1.4",
+    "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
