--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,22 @@ author: Scarborough_Coral
 language: zh-Hans
 timezone:
 
+# 站点地图
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
+
+# 站点提交
+baidu_url_submit:
+  count: 5 ## 提交最新的五个链接
+  host: blog.scarboroughcoral.top ## 百度站长平台中注册的域名
+  token: VvFr9Sal8VjBlV3c ## 准入秘钥
+  path: baidu_urls.txt ## 文本文档的地址， 新链接会保存在此文本文档里
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://blog.scarboroughcoral.top
 root: /
 # permalink: :year/:month/:day/:title/
 permalink: :category/:title/
