--- a/themes/diaspora/_config.yml
+++ b/themes/diaspora/_config.yml
@@ -36,11 +36,11 @@ gitalk:
     # Github名
     owner: 'ScarboroughCoral'
     # Github名
-    admin: ['']
+    admin: ['ScarboroughCoral']
     # Ensure uniqueness and length less than 50
-    id: location.pathname
+    id: scarboroughcoral.blog
     # Facebook-like distraction free mode
-    distractionFreeMode: false
+    distractionFreeMode: true
 
 # 网站关键字
 keywords: ScarboroughCoral
