--- a/themes/diaspora/_config.yml
+++ b/themes/diaspora/_config.yml
@@ -32,21 +32,21 @@ gitalk:
     # 应用秘钥
     clientSecret: '3a59f2524465a5a36a489d02333317bbfd0ca640'
     # issue仓库名
-    repo: 'NyBlog'
+    repo: 'MyBlog'
     # Github名
     owner: 'ScarboroughCoral'
     # Github名
     admin: ['ScarboroughCoral']
     # Ensure uniqueness and length less than 50
-    id: scarboroughcoral.blog
+    id: location.href
     # Facebook-like distraction free mode
-    distractionFreeMode: true
+    distractionFreeMode: false
 
 # 网站关键字
 keywords: ScarboroughCoral
 
 # 要使用google_analytics进行统计的话，这里需要配置ID
-google_analytics: 
+google_analytics: 'UA-130668650-1'
 
 # 网站ico
 favicon: /img/favicon.png
