--- a/themes/diaspora/_config.yml
+++ b/themes/diaspora/_config.yml
@@ -15,7 +15,7 @@ mp3:
   - http://link.hhtjim.com/qq/001faIUs4M2zna.mp3
 
 # 首页封面图, 为空时取文章的cover作为封面
-welcome_cover: # /img/welcome-cover.jpg
+welcome_cover:  /img/welcome-cover.jpg
 
 # 默认文章封面图
 cover: /img/cover.jpg
