--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,27 @@
 
 # Site
 title: Scarborough_Coral's Home
-subtitle:
+subtitle: "戒骄戒躁"
 description: "不忘初心"
 author: Scarborough_Coral
-language: zh-Hans
+language: zh-CN
 timezone:
 
+# 查找
+search:
+  path: search.xml
+  field: post
+
+# RSS
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
 
 # 站点地图
 sitemap:
@@ -52,10 +67,16 @@ post_asset_folder: true
 relative_link: false
 future: true
 highlight:
-  enable: true
+  enable: false
   line_number: true
   auto_detect: false
   tab_replace:
+
+prism_plugin:
+  mode: 'preprocess'    # realtime/preprocess
+  theme: 'hopscotch'
+  line_number: false    # default false
+  custom_css:
 
 # Category & Tag
 default_category: uncategorized
@@ -71,7 +92,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 12
 pagination_dir: page
 
 # Extensions
