--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-baidu-sitemap": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.0",
-    "hexo-generator-search": "^2.3.0",
+    "hexo-generator-search": "^2.4.0",
     "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-marked": "^0.3.2",
