--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Scarborough_Coral's Home
+title: 扶桑树叶
 subtitle: "靡不有初，鲜克有终。"
 description: "长坂坡上草木腥，沧江一梦镜花影。"
 author: Scarborough_Coral
@@ -14,6 +14,8 @@ timezone:
 search:
   path: search.xml
   field: post
+  format: html
+  limit: 10000
 
 # 中文连接
 permalink_pinyin:
@@ -116,3 +118,9 @@ deploy:
   type: git
   repo: git@github.com:ScarboroughCoral/MyBlog.git
   branch: master
+
+symbols_count_time:
+  symbols: true
+  time: true
+  total_symbols: true
+  total_time: true
