update submodules to ci

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "themes/matery"]
-	path = themes/matery
-	url = git@github.com:ScarboroughCoral/hexo-theme-matery.git
 [submodule "themes/next"]
 	path = themes/next
-	url = git@github.com:ScarboroughCoral/hexo-theme-next.git
+	url = https://github.com/ScarboroughCoral/hexo-theme-next.git
