--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://gh_token@github.com:ScarboroughCoral/MyBlog.git
+  repo: https://gh_token@github.com/ScarboroughCoral/MyBlog.git
   branch: master
 
 symbols_count_time:
