--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 扶桑树叶
 subtitle: "靡不有初，鲜克有终。"
-description: "长坂坡上草木腥，沧江一梦镜花影。"
+description: "李明岳的博客"
 author: Scarborough_Coral
 language: zh-CN
 timezone:
