--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title: 扶桑树叶
 subtitle: "靡不有初，鲜克有终。"
-description: "李明岳的博客"
-author: 李明岳
+description: "扶桑树叶的博客"
+author: 扶桑树叶
 language: zh-CN
 timezone:
 
