--- a/_config.yml
+++ b/_config.yml
@@ -18,20 +18,27 @@ search:
   format: html
   limit: 10000
 
-
-# github emoji
-githubEmojis:
-  enable: true
-  className: github-emoji
-  inject: true
-  styles:
-  customEmojis:
-# githubEmojis:
-#   enable: true
-#   className: github-emoji
-#   unicode: false
-#   styles:
-#   localEmojis:
+## markdown 渲染引擎配置，默认是hexo-renderer-marked，这个插件渲染速度更快，且有新特性
+markdown:
+  render:
+    html: true
+    xhtmlOut: false
+    breaks: true
+    linkify: true
+    typographer: true
+    quotes: '“”‘’'
+  plugins:
+    - markdown-it-footnote
+    - markdown-it-sup
+    - markdown-it-sub
+    - markdown-it-abbr
+    - markdown-it-emoji
+  anchors:
+    level: 2
+    collisionSuffix: 'v'
+    permalink: true
+    permalinkClass: header-anchor
+    permalinkSymbol: ¶
 
 # 中文连接
 permalink_pinyin:
