--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.7.1"
+    "version": "3.8.0"
   },
   "dependencies": {
     "gitment": "^0.0.3",
@@ -11,7 +11,6 @@
     "hexo-asset-image": "^0.0.3",
     "hexo-baidu-url-submit": "^0.0.5",
     "hexo-deployer-git": "^0.3.1",
-    "hexo-filter-github-emojis": "^2.0.0",
     "hexo-filter-sequence": "^1.0.3",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-baidu-sitemap": "^0.1.5",
@@ -26,11 +25,12 @@
     "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-kramed": "^0.1.4",
-    "hexo-renderer-marked": "^0.3.2",
+    "hexo-renderer-markdown-it": "^3.4.1",
     "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
     "hexo-symbols-count-time": "^0.4.4",
-    "hexo-wordcount": "^3.0.2"
+    "hexo-wordcount": "^3.0.2",
+    "markdown-it-emoji": "^1.4.0"
   }
 }
