--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
     "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-kramed": "^0.1.4",
-    "hexo-renderer-markdown-it": "^3.4.1",
     "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
     "hexo-symbols-count-time": "^0.4.4",
     "hexo-wordcount": "^3.0.2",
-    "markdown-it-emoji": "^1.4.0"
+    "hexo-renderer-marked": "^0.3.2"
   }
 }
