--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ keywords: 计算机,博客,Web,人工智能
 githubEmojis:
   enable: true
   className: github-emoji
-  unicode: false
+  unicode: true
   styles:
   localEmojis:
 
