--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-lazyload-image": "^1.0.3",
     "hexo-permalink-pinyin": "^1.0.0",
     "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.2.0",
