--- a/_config.yml
+++ b/_config.yml
@@ -136,8 +136,8 @@ deploy:
   repo: https://gh_token@github.com/ScarboroughCoral/MyBlog.git
   branch: master
 
-symbols_count_time:
-  symbols: true
-  time: true
-  total_symbols: true
-  total_time: true
+# symbols_count_time:
+#   symbols: true
+#   time: true
+#   total_symbols: true
+#   total_time: true
