--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-lazyload-image": "^1.0.3",
+    "hexo-leancloud-counter-security": "^1.4.0",
     "hexo-permalink-pinyin": "^1.0.0",
     "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.2.0",
