--- a/_config.yml
+++ b/_config.yml
@@ -67,8 +67,9 @@ baidu_url_submit:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://blog.scarboroughcoral.top
 root: /
-permalink: :year/:month/:day/:title/
+# permalink: :year/:month/:day/:title/
 # permalink: :category/:title/
+permalink: :title.html
 permalink_defaults:
 # Directory
 source_dir: source
